Cleaned up mixins, added "cover" mixin, and removed overflow issue in entry styles.

--- a/app/styles/less/components/entry.less
+++ b/app/styles/less/components/entry.less
@@ -7,7 +7,6 @@
     .container
     {
         margin: 0 auto;
-        overflow: hidden;
         width: @2_column_width;
     }
 
