--- a/app/styles/less/global.less
+++ b/app/styles/less/global.less
@@ -75,14 +75,9 @@ header
 	h1#logo
 	{
 		.rounded(3.438em); //55px
-		.background-size(cover);
-		//.background-size-doubled(70px, auto, auto, auto);
+		.cover();
 
 		background-color: @hot_pink;
-		/*
-		background-image: url(../images/galaxy.png),
-											url(../images/jess_pink.png);
-		*/
 		background-image: url(../images/jess_pink.png);
 		background-position: center;
 		background-repeat: no-repeat;
